--- a/src/components/Nav/NavDesktop/NavDesktop.module.scss
+++ b/src/components/Nav/NavDesktop/NavDesktop.module.scss
@@ -19,11 +19,11 @@
     padding: 10px;
     padding-inline: 15px;
     line-height: 150%;
-    //background: #fff;
+    // background: #fff;
     font-size: 17px;
     font-weight: 400;
     font-family: var(--font-secondary);
-    color: var(--text-primary);
+    color: white;
     position: relative;
 
     .navline {
